@@ -63,6 +63,9 @@ bc-global-history-changed=Global chat history limited to __1__
 bc-force-history-changed=Force chat history limited to __1__
 bc-player-history-changed=Your chat history limited to __1__
 
+bc-listing-admins=Listing admins:
+bc-listing-online-admins=Listing online admins:
+
 bc-invalid-recipient=__1__ is not a valid player!
 # duplicate-message=You cannot send a duplicate message that quickly!
 bc-latency-warning=The feature to simulate message linger and an open or closed chat does not feel nice with latency. Please disable the __REMARK_COLOR_BEGIN__Closeable Chat__REMARK_COLOR_END__ setting
